--- a/home.html
+++ b/home.html
@@ -201,12 +201,14 @@
                   <p class="text-sm poppins-regular text-center">Add Money</p>
                 </div>
               </a>
-              <div
-                class="space-y-2 border rounded-xl border-pink-300 p-3 shadow-xl hover:bg-pink-100 hover:text-black hover:border-none">
-                <div class="flex justify-center items-center"><img class="h-8 w-8" src="image/cash-out.png" alt="">
+              <a href="./cashOut.html">
+                <div
+                  class="space-y-2 border rounded-xl border-pink-300 p-3 shadow-xl hover:bg-pink-100 hover:text-black hover:border-none">
+                  <div class="flex justify-center items-center"><img class="h-8 w-8" src="image/cash-out.png" alt="">
+                  </div>
+                  <p class="text-sm poppins-regular text-center">CashOut</p>
                 </div>
-                <p class="text-sm poppins-regular text-center">CashOut</p>
-              </div>
+              </a>
               <div
                 class="space-y-2 border rounded-xl border-pink-300 p-3 shadow-xl hover:bg-pink-100 hover:text-black hover:border-none">
                 <div class="flex justify-center items-center"><img class="h-8 w-8" src="image/send.png" alt=""></div>
