added transfer money UI

--- a/addMoney.html
+++ b/addMoney.html
@@ -156,7 +156,7 @@
                 <label class="label text-sm poppins-semibold text-black">Select Bank</label>
                 <div class="dropdown relative">
                   <button id="customSelectBtn"
-                    class="w-full h-10 border border-[#fc039c] hover:border-3 bg-white text-gray-400 poppins-regular-italic text-xs py-2 px-4 rounded focus:outline-none flex justify-between items-center">
+                    class="w-full h-10 border border-[#fc039c] hover:border-3 bg-white poppins-regular-italic text-xs py-2 px-4 rounded focus:outline-none flex justify-between items-center">
                     <span id="selectedBank">Select Bank</span>
                     <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
