--- a/home.html
+++ b/home.html
@@ -166,7 +166,8 @@
             </div>
             <div class="">
               <a href="./index.html">
-                <button class="flex gap-2 justify-end items-center btn btn-sm bg-transparent hover:text-[#fc039c] hover:poppins-extra">
+                <button
+                  class="flex gap-2 justify-end items-center btn btn-sm bg-transparent hover:text-[#fc039c] hover:poppins-extra">
                   <p class="text-xs">Log Out</p>
                   <img class="h-5 w-5" src="image/log-out.png" alt="" />
                 </button>
@@ -209,11 +210,13 @@
                   <p class="text-sm poppins-regular text-center">CashOut</p>
                 </div>
               </a>
-              <div
-                class="space-y-2 border rounded-xl border-pink-300 p-3 shadow-xl hover:bg-pink-100 hover:text-black hover:border-none">
-                <div class="flex justify-center items-center"><img class="h-8 w-8" src="image/send.png" alt=""></div>
-                <p class="text-sm poppins-regular text-center">Send</p>
-              </div>
+              <a href="./send.html">
+                <div
+                  class="space-y-2 border rounded-xl border-pink-300 p-3 shadow-xl hover:bg-pink-100 hover:text-black hover:border-none">
+                  <div class="flex justify-center items-center"><img class="h-8 w-8" src="image/send.png" alt=""></div>
+                  <p class="text-sm poppins-regular text-center">Send</p>
+                </div>
+              </a>
               <div
                 class="space-y-2 border rounded-xl border-pink-300 p-3 shadow-xl hover:bg-pink-100 hover:text-black hover:border-none">
                 <div class="flex justify-center items-center"><img class="h-8 w-8" src="image/bonuses.png" alt=""></div>
@@ -257,7 +260,8 @@
                 </button>
                 <dialog id="sendMoney_modal" class="modal">
                   <div class="modal-box w-2/12 poppins-regular space-y-1">
-                    <h3 class="poppins-semibold text-lg">Amount: <span class="text-[#fc039c] poppins-semibold-italic">$ </span><span class="text-black poppins-semibold-italic">200</span></h3>
+                    <h3 class="poppins-semibold text-lg">Amount: <span class="text-[#fc039c] poppins-semibold-italic">$
+                      </span><span class="text-black poppins-semibold-italic">200</span></h3>
                     <p class="text-sm">Time: <span>9:00 PM</span></p>
                     <p class="text-sm">Name: <span>Saif Ahamed</span></p>
                     <p class="text-sm">Account: <span>895#########52</span></p>
