linked transaction with homepage

--- a/home.html
+++ b/home.html
@@ -217,22 +217,29 @@
                   <p class="text-sm poppins-regular text-center">Send</p>
                 </div>
               </a>
-              <div
-                class="space-y-2 border rounded-xl border-pink-300 p-3 shadow-xl hover:bg-pink-100 hover:text-black hover:border-none">
-                <div class="flex justify-center items-center"><img class="h-8 w-8" src="image/bonuses.png" alt=""></div>
-                <p class="text-sm poppins-regular text-center">Bonus</p>
-              </div>
-              <div
-                class="space-y-2 border rounded-xl border-pink-300 p-3 shadow-xl hover:bg-pink-100 hover:text-black hover:border-none">
-                <div class="flex justify-center items-center"><img class="h-8 w-8" src="image/pay.png" alt=""></div>
-                <p class="text-sm poppins-regular text-center">Pay Bill</p>
-              </div>
-              <div
+              <a href="./bonus.html">
+                <div
+                  class="space-y-2 border rounded-xl border-pink-300 p-3 shadow-xl hover:bg-pink-100 hover:text-black hover:border-none">
+                  <div class="flex justify-center items-center"><img class="h-8 w-8" src="image/bonuses.png" alt="">
+                  </div>
+                  <p class="text-sm poppins-regular text-center">Bonus</p>
+                </div>
+              </a>
+              <a href="./payBill.html">
+                <div
+                  class="space-y-2 border rounded-xl border-pink-300 p-3 shadow-xl hover:bg-pink-100 hover:text-black hover:border-none">
+                  <div class="flex justify-center items-center"><img class="h-8 w-8" src="image/pay.png" alt=""></div>
+                  <p class="text-sm poppins-regular text-center">Pay Bill</p>
+                </div>
+              </a>
+              <a href="./transaction.html">
+                <div
                 class="space-y-2 border rounded-xl border-pink-300 p-3 shadow-xl hover:bg-pink-100 hover:text-black hover:border-none">
                 <div class="flex justify-center items-center"><img class="h-8 w-8" src="image/transfer.png" alt="">
                 </div>
                 <p class="text-sm poppins-regular text-center">Transaction</p>
               </div>
+              </a>
             </div>
           </section>
           <!-- 2nd Section -->
